# learn_tonic

./: Cargo.toml  README.md  build.rs
proto/: echo.proto
src/: client.rs  server.rs
